# jingzhen-workshop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  package-lock.json  package.json  使用说明.md
docs/: validation-matrix.md
engine/: entrypoint.py  gpu-component-manifest.json  jingzhen-engine.spec  lama-frame-engine.spec  lama-gpu-launcher.spec  lama_frame_engine.py  lama_gpu_launcher.py  pyproject.toml
engine/jingzhen_engine/: __init__.py  cli.py  composite.py  inpaint.py  lama.py  masks.py  models.py  propainter.py  tracking.py  video.py
engine/tests/: test_cli.py  test_composite.py  test_inpaint.py  test_lama.py  test_lama_frame_engine.py  test_masks.py  test_models.py  test_propainter.py  test_tracking.py  test_video.py
licenses/: FFmpeg-BUILD.md  GPU-COMPONENT-LICENSES.md  MODEL-LICENSES.md
models/: manifest.json
scripts/: assert_tauri_embedded_frontend.ps1  assert_tauri_media_protocol.ps1  build_gpu_runtime_validation.ps1  build_portable.ps1  cache_gpu_component.ps1  download_models.ps1  generate_test_media.py  package_portable_zip.ps1  verify_media.py
src/: App.tsx  editor-store.test.ts  editor-store.ts  gpu-component.test.ts  gpu-component.ts  job-progress.test.ts  job-progress.ts  media-preview.test.ts  media-preview.ts  shortcuts.test.ts  shortcuts.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu_acceleration.rs  jobs.rs  lib.rs  main.rs  media.rs  naming.rs  preview.rs  project.rs  resources.rs  tracking.rs
(+7 files in other folders)
